# mypy

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
docker/api/: Dockerfile
nginx/: nginx.conf
src/: main.py
src/api/home/: home.py
src/api/task/: task_router.py
src/app/: server.py
src/celery_app/: tasks.py  worker.py
src/core/: config.py
src/core/exceptions/: __init__.py  user.py
src/core/fastapi/dependencies/: permission.py
src/schema/: service_health.py
src/utils/: send_mail.py
